<resources>
    <string name="app_name">Biirr</string>
    <string name="search_lbl">Search</string>
    <string name="double_press_exit">Press again to exit</string>
    <string name="internet_not_available">Internet is not available</string>
    <string name="something_went_wrong">Oops, Something went wrong!!</string>
    <string name="no_list_found">No Data Found</string>

    <!-- BODY : Display Body of API Logs
         NONE : Nothing will display in API logs -->

    <string name="okhttp_log_level" translatable="false">BODY</string>
    <string name="cancel">Cancel</string>
    <string name="name_string">Beer : </string>
    <string name="desc_string">Description : </string>
    <string name="abv_string">Alcohol : </string>
    <string name="ibu_string">Ibu : </string>
    <string name="category_string">Category : </string>
    <string name="created_string">Created On : </string>
    <string name="List">List</string>
    <string name="available">Availability : </string>

</resources>