<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="model"
            type="com.dixitpatel.biirr.model.BeerModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/dimen_2dp"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dimen_3dp"
            app:cardElevation="@dimen/dimen_2dp"
            android:elevation="@dimen/dimen_2dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:layout_height="@dimen/dimen_115dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBeerImage"
                    android:layout_width="@dimen/dimen_105dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:image="@{model.labels.mediumIcon}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvBeersName"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="@drawable/picture_shadow_drawable"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBeersName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textDirection="locale"
                    android:text="@string/app_name"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_primary_variant"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingTop="@dimen/dimen_3dp"
                    app:beer_name="@{model.name}"
                    android:textSize="@dimen/text_size_16sp"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivBeerImage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBeerCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/category_string"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins"
                    app:beer_category="@{model.style.category.name}"
                    android:textSize="@dimen/text_size_14sp"
                    android:textDirection="locale"
                    android:layout_marginTop="@dimen/dimen_3dp"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toBottomOf="@+id/tvBeersName"
                    app:layout_constraintStart_toEndOf="@+id/ivBeerImage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBeerAbv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/abv_string"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    app:beer_abv="@{model.abv}"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/text_size_13sp"
                    android:textDirection="locale"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_3dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvBeerCategory"
                    app:layout_constraintStart_toEndOf="@+id/ivBeerImage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBeerIBU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/ibu_string"
                    android:gravity="center_vertical"
                    app:beer_test="@{model.ibu}"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/text_size_13sp"
                    android:layout_marginTop="@dimen/dimen_3dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvBeerAbv"
                    app:layout_constraintStart_toEndOf="@+id/ivBeerImage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCreatedDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/created_string"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:fontFamily="@font/poppins"
                    app:beer_created_date="@{model.createDate}"
                    android:textSize="@dimen/text_size_13sp"
                    android:textDirection="locale"
                    app:layout_constraintTop_toBottomOf="@+id/tvBeerIBU"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivBeerImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
